add site heade section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    
+    <!-- SITE HEADER -->
+    <header class="site-header">
+        <div class="container site-header-container">
+            <a class="site-logo-link" href="./index.html">
+                <img class="site-logo-img" src="./images/svg/site-logo.svg" alt="site-logo" width="136" height="30">
+            </a>
+            <nav class="sitenav">
+                <ul class="sitenav-list">
+                    <li class="sitenav-item"><a class="sitenav-link" href="#">Home</a></li>
+                    <li class="sitenav-item"><a class="sitenav-link" href="#">Latest</a></li>
+                    <li class="sitenav-item"><a class="sitenav-link" href="#">About</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <!-- SITE HEADER END -->
 </body>
 </html>
