add hero section

--- a/index.html
+++ b/index.html
@@ -26,5 +26,37 @@
         </div>
     </header>
     <!-- SITE HEADER END -->
+
+    <!-- SITE MAIN -->
+    <main class="site-main">
+        <div class="container">
+
+            <!-- HERO SECTION -->
+            <section class="hero-section">
+                <div class="hero-section-img-content">
+                    <h3 class="site-subtitle hero-section-subtitle">Illustration</h3>
+                    <h1 class="hero-section-title">Japan House opens in mountainside to foster peak creativity.</h1>
+                    <p class="hero-section-text">Enim omittam qui id, ex quo atqui dictas complectitur. Nec ad timeam accusata, hinc justo falli id eum, ferri novum molestie eos cu.</p>
+                    <span class="by-somebody">
+                        <span class="by-somebody-by">By</span>
+                        <span class="by-somebody-user">Reta Torphy</span>
+                    </span>
+                </div>
+                <img class="hero-section-img" src="./images/jpg/hero-img.jpg" alt="hero-img" srcset="./images/jpg/hero-img.jpg 1x, ./images/jpg/hero-img@2x.jpg 2x" width="721" height="474">
+                <div class="hero-section-text-wrapper">
+                    <h3 class="site-subtitle hero-section-subtitle">Illustration</h3>
+                    <h1 class="hero-section-title">Japan House opens in mountainside to foster peak creativity.</h1>
+                    <p class="hero-section-text">Enim omittam qui id, ex quo atqui dictas complectitur. Nec ad timeam accusata, hinc justo falli id eum, ferri novum molestie eos cu.</p>
+                    <span class="by-somebody">
+                        <span class="by-somebody-by">By</span>
+                        <span class="by-somebody-user">Reta Torphy</span>
+                    </span>
+                </div>
+            </section>
+            <!-- HERO SECTION END -->
+
+        </div>
+    </main>
+    <!-- SITE MAIN END -->
 </body>
 </html>
