--- a/index.html
+++ b/index.html
@@ -55,6 +55,73 @@
             </section>
             <!-- HERO SECTION END -->
 
+            <!-- CARDS TOP -->
+            <div class="section-cards-top">
+                <ul class="cards-top-list">
+                    <!-- CARDS TOP ITEM 1 -->
+                    <li class="cards-top-item">
+                        <img class="cards-top-item-img" src="./images/jpg/city-img.jpg" alt="city-img" srcset="./images/jpg/city-img.jpg 1x, ./images/jpg/city-img@2x.jpg 2x" width="387" height="254">
+                        <h3 class="site-subtitle">Photography</h3>
+                        <h2 class="cards-title">Helmut Lang celebrates taxi drivers worldwide in latest campaign</h2>
+                        <span class="by-somebody">
+                            <span class="by-somebody-by">By</span>
+                            <span class="by-somebody-user">Alessandra Ortiz</span>
+                        </span>
+                    </li>
+                    <!-- CARDS TOP ITEM 2 -->
+                    <li class="cards-top-item">
+                        <img class="cards-top-item-img" src="./images/jpg/food-img.jpg" alt="food-img" srcset="./images/jpg/food-img.jpg 1x, ./images/jpg/food-img@2x.jpg 2x" width="387" height="254">
+                        <h3 class="site-subtitle">Photography</h3>
+                        <h2 class="cards-title">Bowlcut launch a new summer collection that pays homage to “UK legends”</h2>
+                        <span class="by-somebody">
+                            <span class="by-somebody-by">By</span>
+                            <span class="by-somebody-user">Rosanna Ondricka</span>
+                        </span>
+                    </li>
+                    <!-- CARDS TOP ITEM 3 -->
+                    <li class="cards-top-item">
+                        <img class="cards-top-item-img" src="./images/jpg/lake-img.jpg" alt="lake-img" srcset="./images/jpg/lake-img.jpg 1x, ./images/jpg/lake-img@2x.jpg 2x" width="387" height="254">
+                        <h3 class="site-subtitle">Photography</h3>
+                        <h2 class="cards-title">Thousands of previously unseen photographs by Andy Warhol will be made public this Autumn</h2>
+                        <span class="by-somebody">
+                            <span class="by-somebody-by">By</span>
+                            <span class="by-somebody-user">Annie Lueilwitz</span>
+                        </span>
+                    </li>
+                    <!-- CARDS TOP ITEM 4 -->
+                    <li class="cards-top-item">
+                        <img class="cards-top-item-img" src="./images/jpg/beach-img.jpg" alt="beach-img" srcset="./images/jpg/beach-img.jpg 1x, ./images/jpg/beach-img@2x.jpg 2x" width="387" height="254">
+                        <h3 class="site-subtitle">Interactive Design</h3>
+                        <h2 class="cards-title">London-based Yinka Ilori’s storytelling furniture</h2>
+                        <span class="by-somebody">
+                            <span class="by-somebody-by">By</span>
+                            <span class="by-somebody-user">Annie Lueilwitz</span>
+                        </span>
+                    </li>
+                    <!-- CARDS TOP ITEM 5 -->
+                    <li class="cards-top-item">
+                        <img class="cards-top-item-img" src="./images/jpg/man-img.jpg" alt="man-img" srcset="./images/jpg/man-img.jpg 1x, ./images/jpg/man-img@2x.jpg 2x" width="387" height="254">
+                        <h3 class="site-subtitle">Graphic Design</h3>
+                        <h2 class="cards-title">Anonymous Israeli art collective Broken Fingaz direct music video for U2 and Beck</h2>
+                        <span class="by-somebody">
+                            <span class="by-somebody-by">By</span>
+                            <span class="by-somebody-user">Simeon Brekke</span>
+                        </span>
+                    </li>
+                    <!-- CARDS TOP ITEM 6 -->
+                    <li class="cards-top-item">
+                        <img class="cards-top-item-img" src="./images/jpg/tunnel-img.jpg" alt="tunnel-img" srcset="./images/jpg/tunnel-img.jpg 1x, ./images/jpg/tunnel-img@2x.jpg 2x" width="387" height="254">
+                        <h3 class="site-subtitle">Architecture</h3>
+                        <h2 class="cards-title">Suzanne Saroff’s meticulously arranged photographs alter perceptions</h2>
+                        <span class="by-somebody">
+                            <span class="by-somebody-by">By</span>
+                            <span class="by-somebody-user">Reta Torphy</span>
+                        </span>
+                    </li>
+                </ul>
+            </div>
+            <!-- CARDS TOP END -->
+
         </div>
     </main>
     <!-- SITE MAIN END -->
